kustomization/base/traefik/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-svc
spec:
  ports:
    - protocol: TCP
      name: admin
      port: 8080
      targetPort: dashboard
  selector:
    app.kubernetes.io/name: traefik
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-svc
spec:
  ports:
    - name: web
      protocol: TCP
      port: 80
    - name: websecure
      protocol: TCP
      port: 443
  selector:
    app.kubernetes.io/name: traefik
  type: LoadBalancer
