kustomization/base/traefik/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingressroute
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      services:
        - kind: Service
          name: traefik-dashboard-service
          namespace: traefik
          port: 8080
  tls:
    secretName: wildcard-hogs-tswn-us-secret
